Add community page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="">
+<html lang="en">
 
 <head>
   <!-- Title -->
@@ -12,8 +12,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Links -->
-  <link rel="stylesheet" type="text/css" href="global-style.css">
-  <link rel="stylesheet" type="text/css" href="styles/home-style.css">
+  <link rel="stylesheet" type="text/css" href="/global-style.css">
+  <link rel="stylesheet" type="text/css" href="/styles/home-style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;400;700;900&family=Comfortaa:wght@300;400;700&family=Inconsolata&display=swap" rel="stylesheet">
   
@@ -33,13 +33,13 @@
         <div class="flex-container flex-left flex-vcenter">
           <li class="flex-item">
             <a href="index.html">
-              <img src="assets/omgenius-logo-lightmode.png" alt="OMGenius Logo" title="Home">
+              <img src="/assets/omgenius-logo-lightmode.png" alt="OMGenius Logo" title="Home">
               <p id="home">Home</p>
             </a>
           </li>
           
           <li class="flex-item">
-            <a href="omg/features.html">
+            <a href="/omg/features.html">
               Features
             </a>
           </li>
@@ -47,7 +47,7 @@
           <div class="vr flex-item">&nbsp;</div>
 
           <li class="flex-item">
-            <a href="omg/community.html">
+            <a href="/omg/community.html">
               Community
             </a>
           </li>
@@ -55,7 +55,7 @@
           <div class="vr flex-item">&nbsp;</div>
 
           <li class="flex-item">
-            <a href="omg/more.html">
+            <a href="/omg/more.html">
               More
             </a>
           </li>
@@ -65,7 +65,7 @@
 
         <div class="flex-container flex-right flex-vcenter">
           <li>
-            <a href="omg/download.html" class="primary-button download">
+            <a href="/omg/download.html" class="primary-button download">
               Download
             </a>
           </li>
