--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;400;700;900&family=Comfortaa:wght@300;400;700&family=Inconsolata&display=swap" rel="stylesheet">
   
-  <!-- Scripts -->
-  <script src="https://kit.fontawesome.com/eac12758dd.js" crossorigin="anonymous"></script>
+  <!-- Scripts 
+  <script src="https://kit.fontawesome.com/eac12758dd.js" crossorigin="anonymous"></script>-->
 </head>
 
 
