--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Links -->
-  <link rel="stylesheet" type="text/css" href="/styles/global-style.css">
-  <link rel="stylesheet" type="text/css" href="/styles/home-style.css">
+  <link rel="stylesheet" type="text/css" href="./styles/global-style.css">
+  <link rel="stylesheet" type="text/css" href="./styles/home-style.css">
   
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;400;700;900&family=Comfortaa:wght@300;400;700&family=Inconsolata&display=swap" rel="stylesheet">
