--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <div class="flex-container flex-left flex-vcenter">
           <li class="flex-item">
             <a href="index.html">
-              <img src="/assets/omgenius-logo-lightmode.png" alt="OMGenius Logo" title="Home">
+              <img src="./assets/omgenius-logo-lightmode.png" alt="OMGenius Logo" title="Home">
               <p id="home">Home</p>
             </a>
           </li>
           
           <li class="flex-item">
-            <a href="/omg/features.html">
+            <a href="./omg/features.html">
               Features
             </a>
           </li>
@@ -48,7 +48,7 @@
           <div class="vr flex-item">&nbsp;</div>
 
           <li class="flex-item">
-            <a href="/omg/community.html">
+            <a href="./omg/community.html">
               Community
             </a>
           </li>
@@ -56,7 +56,7 @@
           <div class="vr flex-item">&nbsp;</div>
 
           <li class="flex-item">
-            <a href="/omg/more.html">
+            <a href="./omg/more.html">
               More
             </a>
           </li>
@@ -66,7 +66,7 @@
 
         <div class="flex-container flex-right flex-vcenter">
           <li>
-            <a href="/omg/download.html" class="primary-button download">
+            <a href="./omg/download.html" class="primary-button download">
               Download
             </a>
           </li>
