--- a/omg/community.html
+++ b/omg/community.html
@@ -31,13 +31,13 @@
         <div class="flex-container flex-left flex-vcenter">
           <li class="flex-item">
             <a href="/index.html">
-              <img src="//assets/omgenius-logo-lightmode.png" alt="OMGenius Logo" title="Home">
+              <img src="../assets/omgenius-logo-lightmode.png" alt="OMGenius Logo" title="Home">
               <p id="home">Home</p>
             </a>
           </li>
 
           <li class="flex-item">
-            <a href="/omg/features.html">
+            <a href="./features.html">
               Features
             </a>
           </li>
@@ -45,7 +45,7 @@
           <div class="vr flex-item">&nbsp;</div>
 
           <li class="flex-item">
-            <a href="/omg/community.html">
+            <a href="./community.html">
               Community
             </a>
           </li>
@@ -53,7 +53,7 @@
           <div class="vr flex-item">&nbsp;</div>
 
           <li class="flex-item">
-            <a href="/omg/more.html">
+            <a href="./more.html">
               More
             </a>
           </li>
@@ -63,7 +63,7 @@
 
         <div class="flex-container flex-right flex-vcenter">
           <li>
-            <a href="/omg/download.html" class="primary-button download">
+            <a href="./download.html" class="primary-button download">
               Download
             </a>
           </li>
