Fix pesky filepaths

--- a/omg/community.html
+++ b/omg/community.html
@@ -30,7 +30,7 @@
 
         <div class="flex-container flex-left flex-vcenter">
           <li class="flex-item">
-            <a href="/index.html">
+            <a href="../index.html">
               <img src="../assets/omgenius-logo-lightmode.png" alt="OMGenius Logo" title="Home">
               <p id="home">Home</p>
             </a>
