--- a/omg/features.html
+++ b/omg/features.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <!-- Title -->
-  <title>OMGenius | Community</title>
+  <title>OMGenius | Features</title>
   <link rel="icon" href="/assets/favicon.png">
 
   <!-- Meta -->
