--- a/omg/download.html
+++ b/omg/download.html
@@ -89,10 +89,10 @@
         <a href="#">Windows <i class="fab fa-windows"></i></a>
         <br>
         <!-- <i class="fab fa-apple"></i> -->
-        <a href="#">Windows <i class="fab fa-apple"></i></a>
+        <a href="#">Mac <i class="fab fa-apple"></i></a>
         <br>
         <!-- <i class="fab fa-linux"></i> -->
-        <a href="#">Windows <i class="fab fa-linux"></i></a>
+        <a href="#">Linux <i class="fab fa-linux"></i></a>
       </div>
       
       <aside class="flex-item">
